bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: identifier expected but ')' found.
var m:string litMessage()
                        ^BDR2:25: error: ')' expected but '}' found.
	}
        ^